# thread

./: .coverage  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/: CODEOWNERS.md  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  settings.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-docs-bug.md  4-feature-request.md  5-enhancement-request.md  6-security-report.md  7-question-support.md  8-version-checklist.md
.github/workflows/: deploy-docs.yml  draft-release-tag.yml  labeler.yml  linter.yml  release.yml  test-worker.yml
docs/: .eslintrc.json  LICENSE  README.md  command-line.md  configuration.md  exceptions.md  getting-started.md  next-sitemap.config.js  next.config.js  package-lock.json  package.json  parallel-processing.md  tailwind.config.ts  theme.config.tsx  threading.md  tsconfig.json
docs/src/: utils.tsx
docs/src/components/: typedata.tsx  typewriter.tsx
docs/src/pages/: 404.mdx  _app.mdx  _meta.json  about.mdx  index.mdx
docs/src/pages/docs/: _meta.json  index.mdx
docs/src/pages/docs/latest/: _meta.json  command-line-interface.mdx  concurrent-processing.mdx  configuration.mdx  exceptions.mdx  index.mdx  installation.mdx  thread-class.mdx
docs/src/pages/docs/v1/: _meta.json  command-line-interface.mdx  exceptions.mdx  index.mdx  installation.mdx  parallel-processing.mdx  thread-class.mdx
docs/src/pages/learn/: _meta.json  cautions.mdx  examples.mdx  index.mdx
docs/src/pages/learn/cautions/: _meta.json  parallelism.mdx  type-safety.mdx
docs/src/pages/learn/examples/: _meta.json  processing.mdx  threading.mdx
docs/src/pages/learn/python_thread/: _meta.json  index.mdx
docs/src/pages/learn/thread/: index.mdx
docs/src/styles/: globals.css
docs/src/types/: environment.d.ts
src/thread/: __init__.py  __main__.py  _types.py  cli.py  decorators.py  exceptions.py  thread.py  version.py
src/thread/cli/: __init__.py  base.py  process.py  utils.py
src/thread/decorators/: __init__.py  _processor.py  _threaded.py
src/thread/utils/: __init__.py  algorithm.py  config.py  logging_config.py  meta.py
tests/: __init__.py  conftest.py  test_algorithm.py  test_concurrentprocessing.py  test_dataframe_compatibility.py  test_decorator.py  test_parallelprocessing.py  test_placeholder.py  test_thread.py  test_verbosity.py
thread/: __init__.py
