[tool.poetry]
name = "thread"
version = "1.1.1"
description = "Threading module extension"
authors = ["Alex <contact@ngjx.org>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "thread", from = "src" },
  { include = "thread/py.typed", from = "src" },
]
include = [{ path = "tests", format = "sdist" }]
keywords = ["thread", "threading", "extension", "multiprocessing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://thread.ngjx.org"
Documentation = "https://thread.ngjx.org/docs/v1.1.1"
Source = "https://github.com/python-thread/thread"
Download = "https://pypi.org/project/thread/#files"
"Release Notes" = "https://github.com/python-thread/thread/releases"
"Bug Tracker" = "https://github.com/python-thread/thread/issues"

[tool.poetry.scripts]
thread = "thread.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
